<resources>
    <string name="app_name">TOKO ONLINE</string>
    <string name="nama_toko">svtech Pos</string>
    <string name="alamat_toko">www.svtech.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="instruction">Letakkan kartu dibelakang perangkat</string>
    <string name="numberCard">**** **** **** ****</string>
    <string name="saldo">Saldo Anda</string>
    <string name="mohontransfer">Mohon transfer ke nomor virtual account dibawah ini</string>
    <string name="default_balance">Rp.0,00</string>
    <string name="default_card_number">**** **** **** ****</string>
    <string name="warningScan">Silahkan Scan Pada QrCode Dibawah ini.</string>
    <string name="totalbayar">Total Pembayaran</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pilihbayar">Pilih Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="label_nfc">Tempelkan kartu pada bagian sensor NFC</string>
    <string name="serverOn">Server Connected</string>
    <string name="serverOff">Server Disconnected</string>
    <string name="penjualan">Penjualan</string>
    <string name="data_config">Data Config</string>
    <string name="info_umum">Info Umum</string>
    <string name="status_device">Status Device</string>
    <string name="data_bank">Support Data Bank </string>
    <string name="labelfilter">Filter</string>
    <string name="labelfrom">From</string>
    <string name="labelto">To</string>
    <string name="label_reset">Reset</string>
    <string name="label_underdevelopment">Dalam masa pengembangan</string>
    <string name="labelsubmit">Submit</string>
    <string name="lap_rekap_jual">Laporan Rekap Penjualan</string>
    <string name="lap_rekap_detail">Laporan Detail Penjualan</string>
    <string name="lap_stoks">Laporan Stok</string>
    <string name="lap_detail_invoice">Detail</string>
    <string name="app_desk_header">Aplikasi Wirausaha Kelola Bisnis Jadi Maju</string>
    <string name="app_desk_footer">Teknologi kami memudahkan anda untuk bertransaksi lebih cepat</string>
    <string name="support">Support by</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="daftar">Daftar</string>

    <string name="choose_photo_using" translatable="false">Choose photo using …</string>
    <string name="remove_photo" translatable="false">Remove current photo</string>
    <string name="reason_permission_location">Allow to get location from your device</string>
    <string name="reason_permission_camera">You must give permission before you can use the camera and storage</string>
    <string name="reason_permission_bluetooth">Allow to access bluetooth from your device</string>
    <string name="reason_permission_write_external">Allow to save pictures to your device</string>

    <!-- Notifications -->
    <string name="notification_add_to_cart_button">Like</string>
    <string name="notifications_promotions_channel_id" translatable="false">Promotions channel id</string>
    <string name="notifications_promotions_channel_name">Promotions channel</string>
    <string name="notifications_promotions_channel_description">We send you our best deals!</string>
    <string name="diagramtrxamonth">Neraca One Month</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="Month">Month</string>
    <string name="saldo_pending">Saldo Pending : Rp.0</string>
    <string name="saldo_tarik">Saldo Tarik : Rp. 0</string>
    <string name="debet">Debet</string>
    <string name="kredit">Kredit</string>
    <string name="Month_lalu">Bulan Lalu</string>
    <string name="Month_sekarang">Bulan Sekarang</string>
    <string name="diagramtrxWeek">Diagram Transaksi Mingguan</string>
    <string name="action_close">CLOSE</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="reason_permission_read_phone_state">You have to give permission to access IMEI from your device</string>
    <string name="masuk">Masuk</string>
    <string name="syarat"><![CDATA["Dengan ini saya menyatakan telah membaca & menyetujui Ketentuan dan Kebijakan TOKO ONLINE""]]></string>
    <string name="lanjut">Lanjut</string>
    <string name="keluar">Keluar</string>
    <!-- End Notifications -->
</resources>