<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LaporanActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_with_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLaporanHarian"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_laporan"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:drawableTint="@color/white"
        android:text="@string/lap_rekap_jual"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorBlack" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLaporanPenjualan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_laporan"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:drawableTint="@color/white"
        android:text="@string/lap_rekap_detail"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorBlack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLaporanStok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_laporan"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:drawableTint="@color/white"
        android:text="@string/lap_stoks"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorBlack" />

    <TextView
        android:id="@+id/tvVersi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/abu_abu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>