<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetailLaporanHarianActivity">

    <include
        android:id="@+id/include6"
        layout="@layout/layout_toolbar_with_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/labelfilter"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/gradient"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/TvTanggalFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="5"
                    android:drawableRight="@drawable/ic_date"
                    android:gravity="center_vertical"
                    android:hint="@string/labelfrom"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textColorHint="@color/primary" />

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/TvTanggalTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="5"
                    android:drawableRight="@drawable/ic_date"
                    android:gravity="center_vertical"
                    android:hint="@string/labelto"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textColorHint="@color/primary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/TvReset"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rounded_corner_btn_primary_dark"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/label_reset"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TvSubmit"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rounded_corner_white"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/labelsubmit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvEmptyMesage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclvLapDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/tvVersi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/app_name"
        />
</LinearLayout>