<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            cardView:cardCornerRadius="15dp"
            cardView:cardElevation="10dp"
            cardView:cardPreventCornerOverlap="false"
            cardView:cardUseCompatPadding="false">

            <FrameLayout
                android:id="@+id/card_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:visibility="visible" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textview_card_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label_nfc"
            android:textColor="#ff454545" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/abu_abu"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp">

        <TextView
            android:id="@+id/tv_status_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="Cek Server"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_status_server"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_baseline_wifi_off_24"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Saldo" />

        <TextView
            android:id="@+id/balance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/balance_title"
            android:text="@string/default_balance"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_below="@id/balance_value"
            android:id="@+id/label_total_bayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Total bayar" />

        <TextView

            android:id="@+id/balance_pay_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_total_bayar"
            android:text="@string/default_balance"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_pay"
        style="@style/Animation.Design.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/bayar" />

    <!--</LinearLayout>-->
</LinearLayout>