<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <include
        android:id="@+id/include4"
        layout="@layout/layout_toolbar_with_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llResponseMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/rounded_corner_blue"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/status_device"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_weight="6"
                        android:gravity="center_vertical"
                        android:text="Imei"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TvImei"
                        android:layout_weight="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_2sdp"
                        android:gravity="center_vertical"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_weight="6"
                        android:gravity="center_vertical"
                        android:text="Message"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TvMessageStatus"
                        android:layout_weight="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_2sdp"
                        android:gravity="center_vertical"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/LlResponseSukses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/rounded_corner_blue"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/data_bank"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RvBankConfig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>